--- a/index.css
+++ b/index.css
@@ -5,8 +5,9 @@
 table#menu {
     width: 100%;
     background-color: rgb(255, 0, 0);
-    padding: 5px;
+    padding: 10px;
     text-align: center;
+    align-items: center;
   
 }
 
