--- a/lojas.css
+++ b/lojas.css
@@ -43,3 +43,11 @@ div#pagamentos {
     margin-top: -20px;
     
 }
+
+footer {
+    color: aliceblue;
+    background-color: rgb(87, 87, 87);
+    padding: 10px;
+    text-align: center;
+    
+}
